Refs #61065 menu galaxy on mobile fixed

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1502,10 +1502,6 @@ header {
       }
 
       .menu--galaxy-menu {
-        display: block;
-      }
-
-      .menu--galaxy-menu {
         @include max-screen($screen-tablet -1) {
           display: none;
         }
